--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <section>
-        <img class = "logo" src="Images/logo.jpeg"  alt="T69 logo">    
+        <img class = "logo" src="logo.jpeg"  alt="T69 logo">    
     </section>
     <br>
 
@@ -31,7 +31,7 @@
                 <a class="anchor_team" href="https://www.youtube.com/results?search_query=binks">
                     <div class="team_section_outer">
                         <div class="team_section_binks" title="Binks Channel">
-                            <img class="player_img" src="Images/Binks.jpeg" alt="Binks">
+                            <img class="player_img" src="Binks.jpeg" alt="Binks">
                         </div>
                     </div>
                 </a>
@@ -41,7 +41,7 @@
                 <a class="anchor_team" href="https://www.youtube.com/channel/UCd-FNl-6SiQw_joSyNTqtIA">
                     <div class="team_section_outer">
                         <div class="team_section_strixx" title="Strixx Channel">
-                            <img class="player_img" src="Images/Strixx.jpeg" alt="Strixx">
+                            <img class="player_img" src="Strixx.jpeg" alt="Strixx">
                         </div>
                     </div>
                 </a>
@@ -52,7 +52,7 @@
                 <a class="anchor_team" href="https://www.youtube.com/channel/UCd-FNl-6SiQw_joSyNTqtIA">
                     <div class="team_section_outer">
                         <div class="team_section_badLove" title="Badlove Channel">
-                            <img class="player_img" src="Images/Strixx.jpeg" alt="Badloves">
+                            <img class="player_img" src="Strixx.jpeg" alt="Badloves">
                         </div>
                     </div>
                 </a>
@@ -62,7 +62,7 @@
                 <a class="anchor_team" href="https://www.youtube.com/channel/UCHX1RiQpV1hcAD_mWTSIOiw">
                     <div class="team_section_outer">
                         <div class="team_section_ssami" title="Ssami Channel">
-                            <img class="player_img" src="Images/Ssami.jpeg" alt="Ssami" width="">
+                            <img class="player_img" src="Ssami.jpeg" alt="Ssami" width="">
                         </div>
                     </div>
                 </a>
@@ -73,7 +73,7 @@
                 <a class="anchor_team" href="https://www.youtube.com/channel/UCo-xVuMM3ftR304vxejNcvA">
                     <div class="team_section_outer">
                         <div class="team_section_editt" title="Editt Channel">
-                            <img class="player_img" src="Images/Editt.jpeg" alt="Editt">
+                            <img class="player_img" src="Editt.jpeg" alt="Editt">
                         </div>
                     </div>
                 </a>
@@ -81,7 +81,7 @@
                 <a class="anchor_team" href="https://www.youtube.com/channel/UCAZ4KaZil7dbvISmrbdFLBw">
                     <div class="team_section_outer">
                         <div class="team_section_notfox" title="NotFox Channel">
-                            <img class="player_img" src="Images/NotFoX.jpeg" alt="NotFox ">
+                            <img class="player_img" src="NotFoX.jpeg" alt="NotFox ">
                         </div>
                     </div>
                 </a>
@@ -110,9 +110,9 @@
                 </ul>
             </div>
             <div class="div_img">
-                <img class="tour_img" src="Images/VCC.jpg" alt="VCC"> 
-                <a href="youtube.com/watch?v=LW6SQZLorPA"><img class="tour_img" src="Images/skwad.jpg" alt="skwad" ></a> 
-                <a href="https://www.youtube.com/watch?v=PWBgqHcQIJI&list=PLnrh_SmSb0mNJ3NgWY9zSn_h93fpkwwVe&index=6"><img class="tour_img" src="Images/tec.jpg" alt="tec"></a>
+                <img class="tour_img" src="VCC.jpg" alt="VCC"> 
+                <a href="youtube.com/watch?v=LW6SQZLorPA"><img class="tour_img" src="skwad.jpg" alt="skwad" ></a> 
+                <a href="https://www.youtube.com/watch?v=PWBgqHcQIJI&list=PLnrh_SmSb0mNJ3NgWY9zSn_h93fpkwwVe&index=6"><img class="tour_img" src="tec.jpg" alt="tec"></a>
 
             </div>
 
@@ -125,7 +125,7 @@
                 <a href="https://www.youtube.com/watch?v=zxk0hcceVas">
                     <div class="latest_img" >
 
-                        <img src="Images/latest image.jpg" alt="Binks">  
+                        <img src="latest image.jpg" alt="Binks">  
                         <div class="last_class">
                             <h3 >Binks New Video</h3>
                         </div> 
